Added documentation about IDE JVM arguments